projects done, but topbar align issue

--- a/src/styles/Topbar.css
+++ b/src/styles/Topbar.css
@@ -1,11 +1,12 @@
 .topbar_container {
   position: fixed;
+  background-color: white;
   top: 0; 
   width: 100%;
   display: flex;
   justify-content: center;
-  margin-top: 25px;
-  margin-bottom: 25px;
+  padding-top: 25px;
+  padding-bottom: 25px;
 }
 
 .inner_topbar_container {
